--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-   <string name="app_name">Know Your Birds? (NZ)</string>
+   <string name="app_name">Know Your Birds (NZ)</string>
    <string name="action_settings">Settings</string>
    <string name="number_of_choices">Number of Choices</string>
    <string name="number_of_choices_description">Display 2, 4, 6 or 8 guess buttons</string>
@@ -8,7 +8,7 @@
    <string name="guess_species">Pick the right species:</string>
    <string name="results">%1$d guesses, %2$.02f%% correct</string>
    <string name="incorrect_answer">Incorrect!</string>
-   <string name="encourage_answer">GOOD LUCK!</string>
+   <string name="encourage_answer">DO YOU KNOW</string>
    <string name="default_animal_message">One animal subgroup must be selected. Setting Bird as the default animal subgroup.</string>
    <string name="restarting_quiz">Quiz will restart with your new settings</string>
    <string name="question">Question %1$d of %2$d</string>
@@ -17,6 +17,9 @@
    <string name="image_description">Image of the current species in the quiz</string>
    <string name="default_animal">Birds</string>
    <string name="title_activity_settings">Settings</string>
+   <string name="number_of_questions">Number of Questions</string>
+   <string name="number_of_choices_questions">Display 10, 20 or 50 questions</string>
+   <string name="number_of_questions_description">Number of questions in the quiz</string>
 
    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
